--- a/session1/requirements.txt
+++ b/session1/requirements.txt
@@ -1,7 +1,7 @@
 appnope==0.1.0
 attrs==19.3.0
 backcall==0.1.0
-bleach==3.1.3
+bleach==3.1.4
 cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
@@ -27,6 +27,7 @@ nbconvert==5.6.1
 nbformat==5.0.4
 notebook==6.0.3
 numpy==1.18.2
+pandas==1.0.3
 pandocfilters==1.4.2
 parso==0.6.2
 pexpect==4.8.0
@@ -38,11 +39,13 @@ Pygments==2.6.1
 pyparsing==2.4.6
 pyrsistent==0.16.0
 python-dateutil==2.8.1
+pytz==2019.3
 pyzmq==19.0.0
 qtconsole==4.7.1
 QtPy==1.9.0
 scikit-learn==0.22.2.post1
 scipy==1.4.1
+seaborn==0.10.0
 Send2Trash==1.5.0
 six==1.14.0
 terminado==0.8.3
@@ -53,4 +56,5 @@ traitlets==4.3.3
 wcwidth==0.1.9
 webencodings==0.5.1
 widgetsnbextension==3.5.1
+wquantiles==0.5
 zipp==3.1.0
